--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -100,6 +100,7 @@ platforms:
     username: <%= ENV['GCE_USERNAME'] %>
     public_key_path: <%= ENV['GCE_PUBLIC_KEY_PATH'] %>
     ssh_key: <%= ENV['GCE_SSH_KEY_PATH'] %>
+    machine_type: n1-standard-4
   run_list:
   - recipe[apt]
 
@@ -239,10 +240,20 @@ suites:
   ##################
   # source provider
   ##################
-  - name: runtime-source
-    run_list:
-      - recipe[php_runtime_test::source]
-    includes: ['centos-5.8']
+  # - name: runtime-source
+  #   run_list:
+  #     - recipe[php_runtime_test::source]
+  #   includes: [
+  #     'centos-5.8',
+  #     'centos-6.5',
+  #     'centos-7.0',
+  #     'fedora-20',
+  #     'fedora-21',
+  #     'debian-7.0',
+  #     'ubuntu-10.04',
+  #     'ubuntu-12.04',
+  #     'ubuntu-14.04'
+  #   ]
 
   # #
   # # service
