--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -255,7 +255,11 @@ suites:
   #     'ubuntu-14.04'
   #   ]
 
-  - name: pear_channel
+  ##################
+  # pear
+  ##################
+
+  - name: pear-channel
     run_list:
       - recipe[pear_channel_test]
     attributes:
