savegame: php_pear_channel test cookbooks converging

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -259,20 +259,67 @@ suites:
   # pear
   ##################
 
-  - name: pear-channel
+  - name: pear-channel51
     run_list:
       - recipe[php_pear_channel_test]
     attributes:
       php:
        version: '5.1'
+    includes: [ 'centos-5.8' ]
+
+  - name: pear-channel53
+    run_list:
+      - recipe[php_pear_channel_test]
+    attributes:
+      php:
+       version: '5.3'
+    includes: [
+      'amazon-2014.09',
+      'centos-5.8',
+      'centos-6.5',
+      'ubuntu-10.04',
+      'ubuntu-12.04',
+    ]
+
+  - name: pear-channel54
+    run_list:
+      - recipe[php_pear_channel_test]
+    attributes:
+      php:
+       version: '5.4'
+    includes: [
+      'amazon-2014.09',
+      'centos-5.8',
+      'centos-6.5',
+      'centos-7.0',
+      'debian-7.0'
+    ]
+
+  - name: pear-channel55
+    run_list:
+      - recipe[php_pear_channel_test]
+    attributes:
+      php:
+       version: '5.5'
+    includes: [
+      'amazon-2014.09',
+      'centos-5.8',
+      'centos-6.5',
+      'centos-7.0',
+      'fedora-20',
+      'ubuntu-14.04'
+    ]
+
+  - name: pear-channel56
+    run_list:
+      - recipe[php_pear_channel_test]
+    attributes:
+      php:
+       version: '5.6'
     includes: [
       'centos-5.8',
       'centos-6.5',
       'centos-7.0',
       'fedora-20',
       'fedora-21',
-      'debian-7.0',
-      'ubuntu-10.04',
-      'ubuntu-12.04',
-      'ubuntu-14.04'
     ]
