--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -5,7 +5,7 @@ driver_config:
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %> 
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   aws_ssh_key_id: <%= ENV['AWS_KEYPAIR_NAME'] %>
-
+ewe
 provisioner:
   name: chef_zero
   require_chef_omnibus: latest
